# omicron_ai_pilot_keras

./: CMakeLists.txt  README.md  package.xml
launch/: ai_driver.launch
scripts/: extract_from_rosbag.py  extract_from_rosbag_multiple.ipynb  learn_model.py  match_frame_to_js.py  predict.py  train_nn.ipynb  train_nn_resnet.ipynb
src/: ai_driver.py
